# ff_player_performance

./: README.md  pyproject.toml  requirements.txt
data/: 2024_ff_data.csv  games.csv  nfl_teams.csv
data/claude_data/: dst_weekly_2025.csv  kicker_weekly_2025.csv  season_totals_2025.csv  weekly_stats_2025.csv
data/cleaned_data/: games_2025.csv  season_2025_ff_data.csv  weekly_2025_ff_data.csv
notebooks/: initial_eda.ipynb
src/: claude_ff_data.py  ff_constants.py
src/streamlit/: Home.py  html_elements.py  utils.py
src/streamlit/.streamlit/: config.toml
src/streamlit/content/: about_me.md  best_games.md  best_players.md  biggest_busts.md  defense_vs_position.md  defense_vs_position_worst.md  fall_offs.md  glow_ups.md  home_page.md  league_winners.md  no_td_needed.md  player_comparison.md  player_lookup.md  playoff_winners.md  table_of_contents.md  team_carriers.md  team_fantasy_points.md  unexpected_booms.md  worst_games.md  worst_players.md
src/streamlit/pages/: about_me.py  best_games.py  best_players.py  biggest_busts.py  defense_vs_position.py  defense_vs_position_worst.py  fall_offs.py  glow_ups.py  home_page.py  league_winners.py  my_fantasy_story.py  no_td_needed.py  player_comparison.py  player_lookup.py  playoff_winners.py  table_of_contents.py  team_carriers.py  team_fantasy_points.py  unexpected_booms.py  worst_games.py  worst_players.py
