[project]
name = "ff-player-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.26",
    "nfl-data-py>=0.3.2",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "streamlit>=1.58.0",
]
